--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,10 @@
 @media (max-width: 1000px){
+    .title {
+        height:70px;
+        width: 100%;
+        font-size: 40px;
+        padding-left: 9px;
+      }
 
 
 }
@@ -11,6 +17,18 @@
     
     .menu-icon{
         display: block;
+      }
+
+    .header {
+        height:40px ;
+        padding: 10px;
+    }
+
+    .title {
+        height:70px;
+        width: 100%;
+        font-size: 20px;
+        padding-left: 5px;
       }
 
 }
