--- a/responsive.css
+++ b/responsive.css
@@ -28,9 +28,31 @@
         display: none;
     }
 
+    .header-logo{
+        display: none;
+    }
+
     .title {
-        height:140px;
+        height:70px;
         width: 100%;
-        font-size: 10px;
+        font-size: 35px;
         padding-left: 5px;
       }
+
+    .pic1 img{
+        height: 240px;
+        width: 240px;
+        border-radius: 120px;
+        text-align: center;
+    }
+
+    .about-container{
+        width: 100%;
+        text-align: center;
+    }
+
+    .main img{
+        width: 100%;
+    }
+
+}
