--- a/responsive.css
+++ b/responsive.css
@@ -33,23 +33,26 @@
     }
 
     .title {
-        height:70px;
+        height:130px;
         width: 100%;
-        font-size: 35px;
-        padding-left: 5px;
+        font-size: 25px;
       }
 
     .pic1 img{
-        width: 100%;
-        text-align: center;
+       width: 80%;
+       text-align: center;
     }
 
     .about-container{
-        width: 100%;
+        width: 95%;
         text-align: center;
     }
 
     .main img{
+        width: 100%;
+    }
+
+    .video{
         width: 100%;
     }
 
