--- a/responsive.css
+++ b/responsive.css
@@ -61,9 +61,8 @@
         position: sticky;
              top: 15px;
         width:10%;
-        height:40px;
-        color: white;
-        background-color: dimgrey;
+        height:50px;
+        background-color: white;
         letter-spacing: 2px;
         overflow: hidden;
         padding-top: 20px;
@@ -72,5 +71,34 @@
     .main{
         width: 90%;
     }
+
+    .hamburger {
+        width: 40px;
+        height: 32px;
+        position: relative;
+      }
+      
+      .hamburger_bar {
+        display: block;
+        width: 100%;
+        height: 4px;
+        position: absolute;
+        left: 0;
+        background: #000;
+      }
+      
+      .hamburger_bar:nth-child(1) {
+        top: 0;
+      }
+      
+      .hamburger_bar:nth-child(2) {
+        top: 50%;
+        transform: translateY(-50%);
+      }
+      
+      .hamburger_bar:nth-child(3) {
+        top: 100%;
+        transform: translateY(-100%);
+      }
 
 }
