--- a/stylesheet.css
+++ b/stylesheet.css
@@ -176,11 +176,32 @@ h2{
   box-sizing: border-box;
 }
 
-.menu-icon {
-  color: white;
-  text-align: center;
-  font-size: 25px;
-  padding: 21px 0;
-  /* displayをnoneに指定してください */
+.hamburger {
   display: none;
+  width: 40px;
+  height: 32px;
+  position: relative;
+}
+
+.hamburger_bar {
+  display: none;
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  left: 0;
+  background: #000;
+}
+
+.hamburger_bar:nth-child(1) {
+  top: 0;
+}
+
+.hamburger_bar:nth-child(2) {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.hamburger_bar:nth-child(3) {
+  top: 100%;
+  transform: translateY(-100%);
 }
