--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,210 +1,103 @@
-.main{
-  float:right;
-  position:relative;
-  margin:0 auto;
-  width: 70%;
-  height: 85%;
-  background-color: whitesmoke;
+@media (max-width: 1000px){
+    .title {
+        height:70px;
+        width: 100%;
+        font-size: 40px;
+        padding-left: 9px;
+      }
+
+
 }
 
-.main img{
-  width: 50%;
-}
 
-.title {
-    color:  white;
-    background-color: black;
-    height:70px;
-    font-size: 45px;
-    padding-left: 10px;
-  }
+@media (max-width: 670px) {
+    .header-right{
+        display: none;
+      }   
+    
+    .menu-icon{
+        display: block;
+      }
 
-  ul {
-    list-style: none;
-  }
+    .header {
+        height:40px ;
+        padding: 10px;
+    }
 
-.header {
-    color:  black;
-    background-color: white;
-    height:40px ;
-    padding: 10px;
-}
+    .header-list{
+        display: none;
+    }
 
-.header-logo{
-    float:left;
-    font-size: 35px;
-    padding-left: 15px;
-}
+    .header-logo{
+        display: none;
+    }
 
-.header-list a{
-    float: left;
-    color: black;
-    font-size: 20px;
-    padding-bottom:10px;
-    padding-left:25px;
-}
+    .title {
+        height:10%;
+        width: 100%;
+        font-size: 25px;
+      }
 
-.pic1 img{
-  height: 240px;
-  width: 240px;
-  border-radius: 120px;
- 
-}
+    .pic1 img{
+       width: 80%;
+       text-align: center;
+    }
 
-.about{
-  background-color: black;
-  color:antiquewhite;
-  width: 100%;
-  position: relative;
-  height:360px;
-  letter-spacing: 3px;
-  padding-top: 10px;
-}
+    .about-container{
+        width: 95%;
+        text-align: center;
+        height: 25%;
+    }
 
-.sidebar{
-  float: left;
-  position: sticky;
-       top: 15px;
-  width: 30%;
-  height: 80vh;
-  color: white;
-  background-color: dimgrey;
-  letter-spacing: 2px;
-  overflow: hidden;
-  padding-top: 20px;
-}
+    .main img{
+        width: 100%;
+    }
 
-.sidebar a{
-  color: white;
-}
+    .video{
+        width: 100%;
+    }
 
-.footer{
-  clear: both;
-  color: white;
-  background-color: black;
-  height: 80px;
-  font-size: 10px;
-}
+    .sidebar{
+        position: sticky;
+             top: 10px;
+        width:15%;
+        height:10vh;
+        background-color: white;
+        letter-spacing: 2px;
+        padding-top: 20px;
+      }
 
-.btn{
-  padding: 4px 10px;
-  color: white;
-  display: inline-block;
-  opacity: 0.8;
-  border-radius:4px;
-}
+    .main{
+        width: 90%;
+    }
 
-.twitter{
-  background-color: #55acee;
-}
+    .hamburger {
+        width: 40px;
+        height: 32px;
+        position: relative;
+      }
+      
+      .hamburger_bar {
+        display: block;
+        width: 100%;
+        height: 4px;
+        position: absolute;
+        left: 0;
+        background: #000;
+      }
+      
+      .hamburger_bar:nth-child(1) {
+        top: 0;
+      }
+      
+      .hamburger_bar:nth-child(2) {
+        top: 50%;
+        transform: translateY(-50%);
+      }
+      
+      .hamburger_bar:nth-child(3) {
+        top: 100%;
+        transform: translateY(-100%);
+      }
 
-.instagram{
-  background-color: crimson;
-  margin-top: 20px;
-}
-
-.linkedin{
-  background-color: blue;
-  margin-top: 20px;
-}
-
-.btn-wrapper{
-  display: inline-block;
-  margin-left: 10px;
-  
-}
-
-.about-container{
-  margin: 0 0 0 10px;
-  padding: 0;
-  font-size: 14px;
-}
-
-.btn:hover{
-  opacity:1;}
-
-figure.pic1{
-  display: inline-block;
-}
-
-.fa{
-  margin-right:5px;
-}
-
-.message{
-  background-color: #5dca88;
-  padding: 15px 40px;
-  box-shadow:0 7px #1a7940;
-}
-
-.message:active{
-  box-shadow:none;
-  position:relative;
-  top:7px;
-}
-
-.message-wrapper{
-  border-bottom:1px solid #eee;
-  padding-bottom:80px;
-  text-align:center;
-}
-
-.flex{
-  display:flex;
-}
-
-.main p{
-  width: 90%;
-  padding-left: 5%;
-}
-
-h2{
-  padding-left: 7%;
-}
-
-.skill{
-  width: 90%;
-  padding-left: 5%;
-}
-
-.main hr{
-  width: 95%;
-  color: black;
-}
-
-*{
-  box-sizing: border-box;
-}
-
-.hamburger {
-  display: none;
-  width: 40px;
-  height: 32px;
-  position: relative;
-}
-
-.hamburger_bar {
-  display: none;
-  width: 100%;
-  height: 4px;
-  position: absolute;
-  left: 0;
-  background: #000;
-}
-
-.hamburger_bar:nth-child(1) {
-  display: none;
-  top: 0;
-}
-
-.hamburger_bar:nth-child(2) {
-  display: none;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.hamburger_bar:nth-child(3) {
-  display: none;
-  top: 100%;
-  transform: translateY(-100%);
 }
