--- a/responsive.css
+++ b/responsive.css
@@ -60,8 +60,8 @@
     .sidebar{
         position: sticky;
              top: 10px;
-        width:10%;
-        height:50px;
+        width:15%;
+        height:10vh;
         background-color: white;
         letter-spacing: 2px;
         padding-top: 20px;
