--- a/responsive.css
+++ b/responsive.css
@@ -44,10 +44,16 @@
     }
 
     .about-container{
-        width: 95%;
-        text-align: center;
+        width: 100%;
         height: 25%;
+        font-size: 7px;
     }
+
+    .btn-wrapper{
+        display: inline-block;
+        margin-left: 5px;
+        
+      }
 
     .main img{
         width: 100%;
@@ -75,5 +81,13 @@
     .link h2{
         display: block;
       }
+
+    .menu h2{
+        display: none;
+    }
+
+    .menu a{
+        display: none;
+    }
 
 }
