--- a/responsive.css
+++ b/responsive.css
@@ -67,27 +67,17 @@
         float: left;
         position: sticky;
              top: 10px;
-        width: 5%;
-        height: 10vh;
-        color: black;
-        background-color: white;
+        width: 15%;
+        height: 80vh;
+        color: white;
+        background-color: dimgray;
         overflow: hidden;
       }
 
     .main{
-        width: 90%;
+        width: 85%;
     }
 
-    .link h2{
-        display: block;
-      }
-
-    .menu h2{
-        display: none;
-    }
-
-    .menu a{
-        display: none;
-    }
+    
 
 }
