--- a/responsive.css
+++ b/responsive.css
@@ -43,9 +43,14 @@
        text-align: center;
     }
 
+    .about{
+        height:800px;
+        letter-spacing: 3px;
+        padding-top: 10px;
+      }
+
     .about-container{
         width: 100%;
-        height: 25%;
         font-size: 7px;
     }
 
