--- a/responsive.css
+++ b/responsive.css
@@ -95,5 +95,15 @@
         font-size: 5px;
     }
 
+    .btn-wrapper{
+        display: inline-block; 
+      }
+
+    .btn-wrapper a{
+        float: left;
+        padding-bottom:10px;
+        padding-left:10px;
+    }
+
 
 }
