--- a/responsive.css
+++ b/responsive.css
@@ -44,7 +44,7 @@
     }
 
     .about{
-        height:800px;
+        height:30%;
         letter-spacing: 3px;
         padding-top: 10px;
       }
@@ -56,7 +56,6 @@
 
     .btn-wrapper{
         display: inline-block;
-        margin-left: 5px;
         
       }
 
@@ -96,13 +95,11 @@
     }
 
     .btn-wrapper{
-        display: inline-block; 
+        display:none; 
       }
 
-    .btn-wrapper a{
+    .btn-wrapper-a{
         float: left;
-        padding-bottom:10px;
-        padding-left:10px;
     }
 
 
