--- a/responsive.css
+++ b/responsive.css
@@ -98,9 +98,12 @@
         display:none; 
       }
 
-    .btn-wrapper-a{
-        float: left;
-    }
+      .btn-wrapper-a{
+        display: block;
+        float:left;
+        margin-left: 5px;
+        font-size: 3px;
+      }
 
 
 }
