--- a/responsive.css
+++ b/responsive.css
@@ -74,7 +74,7 @@
         position: sticky;
              top: 10px;
         width: 25%;
-        height: 80vh;
+        height: 70vh;
         color: white;
         background-color: dimgray;
         overflow: hidden;
@@ -111,6 +111,7 @@
     .flex{
         display:flex;
         flex-flow: column;
+        text-align: center;
     }
 
 }
