--- a/responsive.css
+++ b/responsive.css
@@ -114,4 +114,10 @@
         text-align: center;
     }
 
+    .header-contents{
+      height:10%;
+      width: 100%;
+      font-size: 25px;
+    }
+
 }
