--- a/responsive.css
+++ b/responsive.css
@@ -24,8 +24,12 @@
         padding: 10px;
     }
 
-    .header-list{
-        display: none;
+    .header-list a{
+      float: left;
+      color: black;
+      font-size: 6px;
+      padding-bottom:10px;
+      padding-left:7px;
     }
 
     .header-logo{
