--- a/responsive.css
+++ b/responsive.css
@@ -104,8 +104,9 @@
         display: block;
         float:left;
         margin-left: 10px;
-        font-size: 10px;
-        margin-bottom: 3px;
+        font-size: 15px;
+        margin-bottom:3px;
+        margin-top: 5px;
       }
 
     .flex{
