--- a/responsive.css
+++ b/responsive.css
@@ -24,9 +24,9 @@
     .header-list a{
       float: left;
       color: black;
-      font-size: 5px;
-      padding-bottom:10px;
-      padding-left:5px;
+      font-size: 11px;
+      padding-bottom:5px;
+      padding-left:7px;
     }
 
     .header-logo{
@@ -34,7 +34,7 @@
     }
 
     .title {
-        height:10%;
+        height: 40px;
         width: 100%;
         font-size: 25px;
       }
