--- a/responsive.css
+++ b/responsive.css
@@ -34,9 +34,9 @@
     }
 
     .title {
-        height: 30%;
+        height: 40px;
         width: 100%;
-        font-size: 25px;
+        font-size: 20px;
       }
 
     .pic1 img{
