--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@
   width: 50%;
 }
 
-.title {
+h1.name {
     color:  white;
     background-color: black;
     height:80px;
@@ -25,7 +25,7 @@
 .header {
     color:  black;
     background-color: white;
-    height:40px ;
+    height:70px ;
     padding: 10px;
 }
 
@@ -182,4 +182,11 @@ h2{
   margin-left: 5px;
   font-size: 3px;
   margin-bottom: 10px;
+}
+
+.name{
+  color: white;
+  background-color: black;
+  font-size: 40px;
+  text-align: center;
 }
