--- a/responsive.css
+++ b/responsive.css
@@ -116,6 +116,17 @@
         text-align: center;
     }
 
+    .name{
+      color: white;
+      background-color: black;
+      font-size: 20px;
+      text-align: center;
+    }
+
+    .main h1{
+      font-size: 15px;
+    }
+
 
 
 
